2018-03-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/cparse.boot, src/interp/g-util.boot,
	src/interp/i-syscmd.boot, src/interp/i-toplev.boot,
	src/interp/int-top.boot, src/interp/ptrees.boot,
	src/interp/util.lisp:  Misc cleanups

2018-03-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/buildom.boot, src/interp/category.boot,
	src/interp/define.boot:  Do not use environment in Join

2018-03-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Remove support for calling Fortran
	* src/algebra/fortpak.spad: Remove FORT and NAGSP
	src/interp/fortcall.boot: Remove
	src/algebra/Makefile.in, src/interp/Makefile.in: Adjust

2018-03-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-con.boot, src/interp/br-op1.boot,
	src/interp/br-op2.boot, src/interp/br-saturn.boot,
	src/interp/br-search.boot, src/interp/br-util.boot,
	src/interp/g-error.boot, src/interp/ht-root.boot,
	src/interp/i-output.boot, src/interp/i-toplev.boot,
	src/interp/msgdb.boot, src/interp/setq.lisp:
	Remove code for Saturn

2018-03-18  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/doc/htex/GUESSPI.htex, src/doc/htex/LLLRED.htex: fix
	compilation of book.pdf

2018-03-18  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/Makefile.in, src/interp/compiler.boot,
	src/interp/define.boot, src/interp/g-boot.boot,
	src/interp/lisplib.boot, src/interp/nruncomp.boot,
	src/interp/setq.lisp: Remove profiling support
	src/interp/profile.boot : Delete

2018-03-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-prof.boot: Delete file
	src/interp/Makefile.in, src/interp/br-con.boot,
	src/interp/br-saturn.boot: Adjust
	src/interp/compiler.boot, src/interp/define.boot,
	src/interp/i-resolv.boot, src/interp/macros.lisp,
	src/interp/ncomp.boot, src/interp/nruncomp.boot,
	src/interp/nrunopt.boot, src/interp/util.lisp:
	Misc cleanups

2018-03-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/br-con.boot, src/interp/br-data.boot,